Add Program page

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -28,6 +28,13 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
+      - file: "src/pages/program/index.md"
+        label: "Програма конференції"
+        name: "program"
+        fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "program-page"}
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/products/index.md"
         label: "Спікери"
         name: "products"
