--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -54,7 +54,7 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "sposors-page"}
           - {label: Heading, name: heading, widget: string}
           - {label: Description, name: description, widget: string}
-          - {label: Intro, name: intro, widget: object, fields: [{label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: text}]}]}
+          - {label: Intro, name: intro, widget: object, fields: [{label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: text}, {label: Url, name: url, widget: string}]}]}
       - file: "src/pages/contact/index.md"
         label: "Contact"
         name: "contact"
